kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: upi-guardian-app

spec:
  replicas: 3

  selector:
    matchLabels:
      app: upi-guardian

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1

  template:
    metadata:
      labels:
        app: upi-guardian

    spec:
      containers:
        - name: upi-guardian

          image: upi-guardian-ai:prod
          imagePullPolicy: Never

          ports:
            - containerPort: 8000

          readinessProbe:
            httpGet:
              path: /health/
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /health/
              port: 8000
            initialDelaySeconds: 60
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 3
