kubernetes/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: upi-guardian-service

spec:
  selector:
    app: upi-guardian

  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000

  type: ClusterIP
